tests/expectations/compiler/array/array_too_large_fail.out
Error [ETYC0372077]: An array cannot have more than 512 elements, found one with 513 elements
    --> compiler-test:3:20
     |
   3 |     transition foo(a: [bool; 513]) -> bool {
     |                    ^^^^^^^^^^^^^^
Error [ETYC0372077]: An array cannot have more than 512 elements, found one with 513 elements
    --> compiler-test:4:19
     |
   4 |         let bar = [false; 513];
     |                   ^^^^^^^^^^^^
